*Empty MediaWiki Message*

--- a/Ikigereki.mw
+++ b/Ikigereki.mw
@@ -1,1 +1,23 @@
-#REDIRECT [[Bugereki]]
+[[File:P46.jpg|thumb|250px|<font color="grey">Ikigereki</font>]]
+
+'''Ikigereki''' (izina mu kigereki : ''ελληνική γλώσσα'' ) ni [[ururimi]] rw’[[Ubugereki]]. 
+
+== Alfabeti y’kigereki ==
+Igifero kigizwe n’inyuguti 24 : α β γ δ ε ζ η θ ι κ λ μ ν ξ ο π ρ σ (ς) τ υ φ χ ψ ω
+:inyajwi 7 : α ε η ι ο υ ω
+:indagi 17 : β γ δ ζ θ κ λ μ ν ξ π ρ σ (ς) τ φ χ ψ 
+
+<center>
+{|class="wikitable" style="border-collapse:collapse;"
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|width=3% align="center"|[[Α]]||width=3% align="center"|[[Β]]||width=3% align="center"|[[Γ]]||width=3% align="center"|[[Δ]]||width=3% align="center"|[[Ε]]||width=3% align="center"|[[Ζ]]||width=3% align="center"|[[Η]]||width=3% align="center"|[[Θ]]||width=3% align="center"|[[Ι]]||width=3% align="center"|[[Κ]]||width=3% align="center"|[[Λ]]||width=3% align="center"|[[Μ]]||width=3% align="center"|[[Ν]]||width=3% align="center"|[[Ξ]]||width=3% align="center"|[[Ο]]||width=3% align="center"|[[Π]]||width=3% align="center"|[[Ρ]]||width=3% align="center"|[[Σ]]||width=3% align="center"|[[Τ]]||width=3% align="center"|[[Υ]]||width=3% align="center"|[[Φ]]||width=3% align="center"|[[Χ]]||width=3% align="center"|[[Ψ]]||width=3% align="center"|[[Ω]]
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|align="center"|α||align="center"|β||align="center"|γ||align="center"|δ||align="center"|ε||align="center"|ζ||align="center"|η||align="center"|θ||align="center"|ι||align="center"|κ||align="center"|λ||align="center"|μ||align="center"|ν||align="center"|ξ||align="center"|ο||align="center"|π||align="center"|ρ||align="center"|σ/ς||align="center"|τ||align="center"|υ||align="center"|φ||align="center"|χ||align="center"|ψ||align="center"|ω
+|}
+</center>
+
+[[Category:Indimi z’igihinde-buraya]]
