*Empty MediaWiki Message*

--- a/Yawurute.mw
+++ b/Yawurute.mw
@@ -1,6 +1,6 @@
 [[File:Joghurt.jpg|thumb|250px|<font color="green">Yawurute </font>]]
 
-'''Yawurute''' (izina mu [[Igiturukiya]] ''yoğurt'')
+'''Yawurute''' (izina mu [[giturukiya]] ''yoğurt'')
 
 Ku bantu bafata ibyo biribwa bikomoka ku mata birimo nka [[foromaje]], yawurute, abakoreweho igenzura basanze bafite amahirwe macye yo gufatwa n’indwara z’umutima kurusha abatarigeze bafata ibyo biribwa. Umubiri ukenera kandi ibikomoka ku mata : [[amata]], yawurute, foromaje ibi bitanga karisiyumu ikomeza amagufa , poroteyine kimwe na vitamini A,B,C.
 
