*Empty MediaWiki Message*

--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -1,6 +1,6 @@
 [[File:MapOfTurkishSpeakers.png|thumb|350px|<font color="grey">Ikarita y’Ikinyaturukiya</font>]]
 
-'''Ikinyaturukiya''' cyangwa '''Igiturukiya''' ni [[ururimi]] rw’[[abanyaturukiya]] na rwa [[Turukiya]]. 
+'''Igiturukiya''' cyangwa '''Ikinyaturukiya''' ni [[ururimi]] rw’[[abanyaturukiya]] na rwa [[Turukiya]]. 
 
 == Alfabeti y’ikinyaturukiya ==
 Ikinyaturukiya kigizwe n’inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o ö p r s ş t u ü v y z
