*Empty MediaWiki Message*

--- a/Ibirwa_bya_Solomoni.mw
+++ b/Ibirwa_bya_Solomoni.mw
@@ -1,7 +1,7 @@
 [[File:Flag of the Solomon Islands.svg|thumb|250px|<font color="grey">Ibendera ry’Ibirwa bya Solomoni</font>]]
 [[File:LocationSolomonIslands.png|thumb|250px|<font color="grey">Ikarita y’Ibirwa bya Solomoni</font>]]
 
-'''Aligeriya''' (izina mu [[cyongereza]] : ''Solomon Islands'' ) n’[[igihugu]] muri [[Oseyaniya]].
+'''Ibirwa bya Solomoni''' (izina mu [[cyongereza]] : ''Solomon Islands'' ) n’[[igihugu]] muri [[Oseyaniya]].
 
 [[Category:Oseyaniya]]
 [[Category:Ibihugu]]
