*Empty MediaWiki Message*

--- a/Noruveje.mw
+++ b/Noruveje.mw
@@ -9,7 +9,7 @@ Muri Noruveje, hari imyaka cumi y’indero y’intango umwana wese ategerezwa kw
 W’umwana wabo maze bagafata ingingo niba umwana wabo azogira iki Noruveje nk’ururimi rwa mbere canke urwa kabiri. Umunyeshure ashobora guhindura akava mu ki Noruveje nk’ururimi rwa kabiri akaja mu masomo asanzwe akoresha iki Noruveje mu gihe cose azoba yiga.
 
 [[Category:Ibihugu]] 
-[[Category:Uburayi]]
+[[Category:Noruveje]]
 
 [[ace:Norwègia]]
 [[af:Noorweë]]
