*Empty MediaWiki Message*

--- a/Ikirwa_cya_Bouve.mw
+++ b/Ikirwa_cya_Bouve.mw
@@ -1,4 +1,4 @@
-[[File:Flag of Norway.svg|thumb|250px|<font color="grey">Ibendera ry’Ikirwa cya Bouve</font>]]
+[[File:Flag of Norway.svg|thumb|250px|<font color="grey">Ibendera rya Noruveje</font>]]
 [[File:Bouvet-pos.png|thumb|250px|<font color="grey">Ikarita y’Ikirwa cya Bouve</font>]]
 
 '''Ikirwa cya Bouve''' (izina mu [[kinyanoruveji]] : ''Bouvetøya'' ) n’[[igihugu]] muri [[Antarigitika]].
