*Empty MediaWiki Message*

--- a/Ikirwa_cya_Man.mw
+++ b/Ikirwa_cya_Man.mw
@@ -3,7 +3,7 @@
 
 '''Ikirwa cya Man''' (izina mu [[kimangisi]] : ''Ellan Vannin'' ; izina mu [[cyongereza]] : ''Isle of Man'' ) n’[[igihugu]] mu [[Burayi]].
 
-[[Category:Burayi]]
+[[Category:Uburayi]]
 [[Category:Ibihugu]]
 
 [[ace:Pulo Man]]
