*Empty MediaWiki Message*

--- a/Ikirwa_cya_Noheli.mw
+++ b/Ikirwa_cya_Noheli.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Christmas Island.svg|thumb|250px|<font color="grey">Ibendera ry’Ikirwa cya Noheli</font>]]
 [[File:Christmasisland.png|thumb|250px|<font color="grey">Ikarita y’Ikirwa cya Noheli</font>]]
 
-'''Ikirwa cya Noheli''' (izina mu [[cyongereza]] : ''Christmas Island'' cyangwa ''Territory of Christmas Island'' ) n’[[igihugu]] muri [[Aziya]].
+'''Ikirwa cya [[Noheli]]''' (izina mu [[cyongereza]] : ''Christmas Island'' cyangwa ''Territory of Christmas Island'' ) n’[[igihugu]] muri [[Aziya]].
 
 [[Category:Aziya]]
 [[Category:Ibihugu]]
