--- a/Noheli.mw
+++ b/Noheli.mw
@@ -1,6 +1,6 @@
 [[File:Nativity tree.jpg|thumb|250px|<font color="green">Noheli</font>]]
 
-'''Noheli''' (izina mu Cyongereza ''Christmas'' ;  izina mu Gifaransa ''Noël'' )
+'''Noheli''' (izina mu [[cyongereza]] : ''Christmas'' ;  izina mu [[gifaransa]] : ''Noël'' )
 
 Ijambo Noheli rikomoka ku ijambo ry’Igifaransa “Noël”, naryo ryakomotse mu [[Kilatini]] “Natalis” bivuze “amavuka”. Mu Cyongereza Noheli ikaba “Christmas”. Mu Cyongereza, iri jambo ni inyunge (''compound'') aho rigizwe na “Christ” na “Mass”, aho rikomoka ku cyongereza cya kera “Christemass” nabyo biva ku cya kera cyane “Cristes mæsse” ryakoreshejwe bwa mbere mu 1038. Naryo rikaba rikomoka mu Kigereki n’Ikilatini, aho "Cristes" bikomoka ku Kigereki “Christos” na"mæsse" rikava ku Lilatini “missa”. 
 
