--- a/Kanada.mw
+++ b/Kanada.mw
@@ -1,6 +1,6 @@
 [[File:Canada (orthographic projection).svg|thumb|250px|<font color="green">Kanada</font>]]
 
-'''Kanada''' ni igihugu kinini cyane giherereye mu gice cyo mu majyaruguru y’umugabane wa [[Amerika ya Ruguru]]. Gikikijwe n’inyanja ya [[Atalantika]] mu burasirazuba, inyanja ya [[Pasifika]] mu burengerazuba n’inyanja ya [[Arikitika]] mu majyaruguru. Nicyo gihugu cya kabiri kinini ku isi mu buso (''total area'') nyuma y’u Burusiya, aho gifite ubuso bwa [[kilometero kare]] 9,984,670. Kanada ihana imbibe na [[Leta Zunze Ubumwe z’Amerika]] mu majyepfo no mu majyaruguru y’uburengerazuba, ukaba ariwo mupaka muremure ku isi.
+'''Kanada''' (izina mu [[cyongereza]] na [[gifaransa]] : ''Canada'' ) ni [[igihugu]] kinini cyane giherereye mu gice cyo mu majyaruguru y’umugabane wa [[Amerika ya Ruguru]]. Gikikijwe n’inyanja ya [[Atalantika]] mu burasirazuba, inyanja ya [[Pasifika]] mu burengerazuba n’inyanja ya [[Arikitika]] mu majyaruguru. Nicyo gihugu cya kabiri kinini ku isi mu buso (''total area'') nyuma y’u Burusiya, aho gifite ubuso bwa [[kilometero kare]] 9,984,670. Kanada ihana imbibe na [[Leta Zunze Ubumwe z’Amerika]] mu majyepfo no mu majyaruguru y’uburengerazuba, ukaba ariwo mupaka muremure ku isi.
 
 Ubusanzwe Kanada yari ituwe n’abasangwabutaka kugera mu kinyejana cya 15 ubwo [[abafaransa]] n’[[abongereza]] bazaga kureba uko hameze. Nyuma baje kuhatura rero, mu nkengero za Atalantika. Abo basangwabutaka baje gushegeshwa bikomeye n’indwara zari ziturutse i [[Burayi]], ubu hasigaye mbarwa.
 
