*Empty MediaWiki Message*

--- a/Kanada.mw
+++ b/Kanada.mw
@@ -1,4 +1,5 @@
-[[File:Canada (orthographic projection).svg|thumb|250px|<font color="green">Kanada</font>]]
+[[File:Flag of Canada.svg|thumb|250px|<font color="green">Ibendera rya Kanada</font>]]
+[[File:Canada (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Kanada</font>]]
 
 '''Kanada''' (izina mu [[cyongereza]] na [[gifaransa]] : ''Canada'' ) ni [[igihugu]] kinini cyane giherereye mu gice cyo mu majyaruguru y’umugabane wa [[Amerika ya Ruguru]]. Gikikijwe n’inyanja ya [[Atalantika]] mu burasirazuba, inyanja ya [[Pasifika]] mu burengerazuba n’inyanja ya [[Arikitika]] mu majyaruguru. Nicyo gihugu cya kabiri kinini ku isi mu buso (''total area'') nyuma y’u Burusiya, aho gifite ubuso bwa [[kilometero kare]] 9,984,670. Kanada ihana imbibe na [[Leta Zunze Ubumwe z’Amerika]] mu majyepfo no mu majyaruguru y’uburengerazuba, ukaba ariwo mupaka muremure ku isi.
 
@@ -10,7 +11,7 @@ Kuri ubu, iki gihugu gituwe n’abaturage basaga miliyoni 31. Nicyo gihugu abant
 Mu mwaka wa [[1763]] abafaransa baretse colonies zose bari bafite muri Amerika ya ruguru, nyuma y’intambara yiswe '"Seven Years' War". Mu mwaka w’ 1867, Kanada yahinduwe intara ifite ubwigenge bucagase, icibwamo intara 4, aha ni naho hatangiriye ukwigenga gusumbyeho, byatumye Kanada itacyometse cyane ku [[Bwongereza]]. Mu mwaka wa [[1919]], Kanada yinjiye muri Société des Nations (League of Nations) nk’igihugu ukwacyo kitari mu Bwongereza, naho mu mwaka wa 1945, Kanada iba kimwe mu bihugu byashinze Loni.
 
 == Intara na teritwari ==
-[[File:Political map of Canada.png|thumb|250px|<font color="green">Ikarita yerekana intara na teritwari za Kanada.</font>]]
+[[File:Political map of Canada.png|thumb|250px|<font color="grey">Ikarita yerekana intara na teritwari za Kanada.</font>]]
 Kuri ubu Kanada igizwe n’intara 10 arizo: [[Ontario]], [[Québec]], [[Alberta]], [[Nova Scotia]], [[New Brunswick]], [[Manitoba]], [[British Columbia]], [[Prince Edward Island]], [[Saskatchewan]] na [[Newfoundland na Labrador]]. Kanada kandi igizwe na [[teritwari]] 3 (''territories'')
 
 Québec niyo ntara nini kurusha izindi, ikaba ari nayo ituwe cyane nyuma ya Ontario. Ikaba ivugirwamo igifaransa cyonyine nk’ururimi rwemewe, mawe mu mashyaka yahoo akaba anifuza ko iyo ntara yakwikura kuri Kanada ikigenga.
