*Empty MediaWiki Message*

--- a/Kanada.mw
+++ b/Kanada.mw
@@ -1,4 +1,4 @@
-[[File:Flag of Canada.svg|thumb|250px|<font color="green">Ibendera rya Kanada</font>]]
+[[File:Flag of Canada.svg|thumb|250px|<font color="grey">Ibendera rya Kanada</font>]]
 [[File:Canada (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Kanada</font>]]
 
 '''Kanada''' (izina mu [[cyongereza]] na [[gifaransa]] : ''Canada'' ) ni [[igihugu]] kinini cyane giherereye mu gice cyo mu majyaruguru y’umugabane wa [[Amerika ya Ruguru]]. Gikikijwe n’inyanja ya [[Atalantika]] mu burasirazuba, inyanja ya [[Pasifika]] mu burengerazuba n’inyanja ya [[Arikitika]] mu majyaruguru. Nicyo gihugu cya kabiri kinini ku isi mu buso (''total area'') nyuma y’u Burusiya, aho gifite ubuso bwa [[kilometero kare]] 9,984,670. Kanada ihana imbibe na [[Leta Zunze Ubumwe z’Amerika]] mu majyepfo no mu majyaruguru y’uburengerazuba, ukaba ariwo mupaka muremure ku isi.
