*Empty MediaWiki Message*

--- a/Kazakisitani.mw
+++ b/Kazakisitani.mw
@@ -1,5 +1,5 @@
-[[File:Flag of Qatar.svg|thumb|250px|<font color="grey">Ibendera rya Kazakisitani</font>]]
-[[File:LocationQatar.png|thumb|250px|<font color="grey">Ikarita ya Kazakisitani</font>]]
+[[File:Flag of Kazakhstan.svg|thumb|250px|<font color="grey">Ibendera rya Kazakisitani</font>]]
+[[File:Kazakhstan (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Kazakisitani</font>]]
 
 '''Kazakisitani''' (izina mu [[gikazaki]] : ''Қазақстан'' cyangwa ''Қазақстан Республикасы'' ; izina mu [[kirusiya]] : ''Казахстан '' cyangwa ''Республика Казахстан'' ) n’[[igihugu]] muri [[Aziya]].
 
