*Empty MediaWiki Message*

--- a/Madagasikari.mw
+++ b/Madagasikari.mw
@@ -1,4 +1,4 @@
-[[File:Flag of Madagascar.svgg|thumb|250px|<font color="grey">Ibendera rya Madagasikari</font>]]
+[[File:Flag of Madagascar.svg|thumb|250px|<font color="grey">Ibendera rya Madagasikari</font>]]
 [[File:Madagascar (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Madagasikari</font>]]
 
 '''Madagasikari''' (izina mu [[kimaragasi]] :  ''Repoblikan'i Madagasikara'' ; izina mu [[gifaransa]] : ''République de Madagascar'' ) n’[[igihugu]] muri [[Afurika]].
