*Empty MediaWiki Message*

--- a/Burundi.mw
+++ b/Burundi.mw
@@ -1,6 +1,6 @@
 [[File:Flag of Burundi.svg|thumb|300px|Flag Burundi]]
 
-'''Burundi''' cyangwa '''Repubulika y'u Burundi''' ni igihugu wa [[ibiyaga bigari]]. Ku ejuru ni [[Rwanda]],hasi ni [[Tanzaniya]] na hafi ni[[ Repubulika Demokratiki ya Congo]]. Kuko baravuga [[ikirundi]] na [[umufaransa]] namwe [[igiswahili]].
+'''Burundi''' cyangwa '''Repubulika y'u Burundi''' ni [[igihugu]] wa [[ibiyaga bigari]]. Ku ejuru ni [[Rwanda]], hasi ni [[Tanzaniya]] na hafi ni[[ Repubulika Demokratiki ya Congo]]. Kuko baravuga [[ikirundi]] na [[igifaransa]] namwe [[igiswahili]].
 
 [[Category:Burundi|*]]
 [[Category:Ibihugu]]
