--- a/Burundi.mw
+++ b/Burundi.mw
@@ -1,8 +1,9 @@
-[[File:Flag of Burundi.svg|thumb|300px|Flag Burundi]]
+[[File:Flag of Burundi.svg|thumb|250px|<font color="grey">Ibendera ry’Uburundi</font>]]
+[[File:LocationBurundi.svg|thumb|250px|<font color="grey">Ikarita y’Uburundi</font>]]
 
-'''Burundi''' cyangwa '''Repubulika y'u Burundi''' ni [[igihugu]] wa [[ibiyaga bigari]]. Ku ejuru ni [[Rwanda]], hasi ni [[Tanzaniya]] na hafi ni[[ Repubulika Iharanira Demokarasi ya Kongo]]. Kuko baravuga [[ikirundi]] na [[igifaransa]] namwe [[igiswahili]].
+'''Burundi''' cyangwa '''Repubulika y’u Burundi''' ni [[igihugu]] wa [[ibiyaga bigari]]. Ku ejuru ni [[Rwanda]], hasi ni [[Tanzaniya]] na hafi ni[[ Repubulika Iharanira Demokarasi ya Kongo]]. Kuko baravuga [[ikirundi]] na [[igifaransa]] namwe [[igiswahili]].
 
-[[Category:Burundi|*]]
+[[Category:Burundi| ]]
 [[Category:Ibihugu]]
 
 [[ace:Burundi]]
