*Empty MediaWiki Message*

--- a/Ububiligi.mw
+++ b/Ububiligi.mw
@@ -1,7 +1,7 @@
 [[File:LocationBelgium.png|right|450px|Ububiligi]]
 [[File:Flag of Belgium.svg|right|thumb|Ububiligi]]
 
-'''UBubiligi''' cyangwa '''Igihugu cy’Ububirigi''' n’igihugu muri [[Uburayi]].
+'''UBubiligi''' cyangwa '''Igihugu cy’Ububirigi''' n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
