*Empty MediaWiki Message*

--- a/Ububiligi.mw
+++ b/Ububiligi.mw
@@ -1,5 +1,6 @@
-[[File:LocationBelgium.png|right|450px|Ububiligi]]
-[[File:Flag of Belgium.svg|right|thumb|Ububiligi]]
+[[File:Flag of Belgium.svg|thumb|250px|<font color="grey">Ibendera rya Ububiligi</font>]]
+[[File:LocationBelgium.png|thumb|250px|<font color="grey">Ikarita ya Ububiligi</font>]]
+
 
 '''UBubiligi''' cyangwa '''Igihugu cy’Ububirigi''' n’[[igihugu]] mu [[Burayi]].
 
