--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -7,6 +7,6 @@
 == Amagambo n'interuro mu ikilazi ==
 
 == Imiyoboro == 
-*[http://www.lazuri.com/oxomonduli.html www.lazuri.com <font color="grey">(mu gituruki)</font>
+*[http://www.lazuri.com/oxomonduli.html www.lazuri.com] <font color="grey">(mu gituruki)</font>
 
 [[Category:Indimi]]
