/* Amagambo n'interuro mu ikilazi */

--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -5,6 +5,26 @@
 == umugereka – ubuke ==
 
 == Amagambo n'interuro mu ikilazi ==
+* '''Xelaǩaoba''' – Muraho
+* '''Ǩai moxtit''' – Murakaza neza 
+* '''Didi Mardi'' – Murakoze
+* '''Çkimi coxo...ren''' – Nitwa ...
+* '''Ho''' – Yego
+* '''Va''' – Oya
+
+* '''Ǩoçi''' – umugabo
+* '''Oxorca''' – umugore 
+
+*'''ar''' – rimwe
+*'''jur''' – kabiri
+*'''sum''' – gatatu
+*'''otxo''' – kane
+*'''xut''' – gatanu
+*'''aşi''' – gatandatu
+*'''şkvit''' – karindwi
+*'''ovro''' – umunani
+*'''nçxoro''' – icyenda
+*'''vit''' – icyenda
 
 == Imiyoboro == 
 *[http://www.lazuri.com/oxomonduli.html www.lazuri.com] <font color="grey">(mu gituruki)</font>
