/* Amagambo n'interuro mu ikilazi */

--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -12,8 +12,8 @@
 * '''Ho''' – Yego
 * '''Va''' – Oya
 
-* '''Ǩoçi''' – umugabo
-* '''Oxorca''' – umugore 
+* '''ǩoçi''' – umugabo
+* '''oxorca''' – umugore 
 
 *'''ar''' – rimwe
 *'''jur''' – kabiri
