--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -3,6 +3,15 @@
 == Alfabeti y’ikilazi ==
 
 == umugereka – ubuke ==
+* -(e)pe
+** '''Laz''' – '''Lazepe''' Umulazi – Abalazi
+** '''çxomi''' – '''çxomepe''' ifi – amafi
+** '''bere''' – '''berepe''' umwana – abwana
+
+* -lepe
+** '''ndğa''' – '''ndğalepe''' umunsi – iminsi
+** '''nca''' – '''ncalepe''' igiti – ibiti
+** '''kva''' – '''kvalepe''' ibuye – amabuye
 
 == Amagambo n'interuro mu ikilazi ==
 * '''Xelaǩaoba''' – Muraho
