--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -3,12 +3,12 @@
 == Alfabeti y’ikilazi ==
 
 == umugereka – ubuke ==
-* -(e)pe
+* '''-(e)pe'''
 ** '''Laz''' – '''Lazepe''' Umulazi – Abalazi
 ** '''çxomi''' – '''çxomepe''' ifi – amafi
 ** '''bere''' – '''berepe''' umwana – abwana
 
-* -lepe
+* '''-lepe'''
 ** '''ndğa''' – '''ndğalepe''' umunsi – iminsi
 ** '''nca''' – '''ncalepe''' igiti – ibiti
 ** '''kva''' – '''kvalepe''' ibuye – amabuye
