--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -1,6 +1,9 @@
 '''Ikilazi''' (izina mu kilazi : ''lazuri nena'' ) ni [[ururimi]] rwa [[Turukiya]] na [[Geworugiya]]. 
 
 == Alfabeti y’ikilazi ==
+Ikilazi kigizwe n’inyuguti 35 : a b c ç ç̌ d e f g ğ h x i j k ǩ q l m n o p p̌ r s ş t t̆ u v y z ž ʒ ǯ
+:inyajwi 5 : a e i o u 
+:indagi 30 : b c ç ç̌ d f g ğ h x j k ǩ q l m n p p̌ r s ş t t̆ v y z ž ʒ ǯ
 
 == umugereka – ubuke ==
 * '''-(e)pe'''
