--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -10,11 +10,11 @@ Ikilazi kigizwe n’inyuguti 35 : a b c ç ç̌ d e f g ğ h x i j k ǩ q l m n 
 |-
 |bgcolor="#EFEFEF" align="center" colspan="29" | 
 |-
-|width=3% align="center"|[[A]]||width=3% align="center"|[[B]]||width=3% align="center"|[[C]]||width=3% align="center"|[[Ç]]||width=3% align="center"|[[Ç̌]]||width=3% align="center"|[[D]]||width=3% align="center"|[[E]]||width=3% align="center"|[[F]]||width=3% align="center"|[[G]]||width=3% align="center"|[[Ğ]]||width=3% align="center"|[[H]]||width=3% align="center"|[[X]]||width=3% align="center"|[[İ]]||width=3% align="center"|[[J]]||width=3% align="center"|[[K]]||width=3% align="center"|[[Ǩ]]||width=3% align="center"|[[Q]]||width=3% align="center"|[[L]]||width=3% align="center"|[[M]]||width=3% align="center"|[[N]]||width=3% align="center"|[[O]]||width=3% align="center"|[[P]]||width=3% align="center"|[[P̌]]||width=3% align="center"|[[R]]||width=3% align="center"|[[S]]||width=3% align="center"|[[Ş]]||width=3% align="center"|[[T]]||width=3% align="center"|[[Ť]]||width=3% align="center"|[[U]]||width=3% align="center"|[[V]]||width=3% align="center"|[[Y]]||width=3% align="center"|[[Z]]||width=3% align="center"|[[Ž]]||width=3% align="center"|[[Ʒ]]||width=3% align="center"|[[Ǯ]]||
+|width=3% align="center"|[[A]]||width=3% align="center"|[[B]]||width=3% align="center"|[[C]]||width=3% align="center"|[[Ç]]||width=3% align="center"|[[Ç̌]]||width=3% align="center"|[[D]]||width=3% align="center"|[[E]]||width=3% align="center"|[[F]]||width=3% align="center"|[[G]]||width=3% align="center"|[[Ğ]]||width=3% align="center"|[[H]]||width=3% align="center"|[[X]]||width=3% align="center"|[[İ]]||width=3% align="center"|[[J]]||width=3% align="center"|[[K]]||width=3% align="center"|[[Ǩ]]||width=3% align="center"|[[Q]]||width=3% align="center"|[[L]]||width=3% align="center"|[[M]]||width=3% align="center"|[[N]]||width=3% align="center"|[[O]]||width=3% align="center"|[[P]]||width=3% align="center"|[[P̌]]||width=3% align="center"|[[R]]||width=3% align="center"|[[S]]||width=3% align="center"|[[Ş]]||width=3% align="center"|[[T]]||width=3% align="center"|[[Ť]]||width=3% align="center"|[[U]]||width=3% align="center"|[[V]]||width=3% align="center"|[[Y]]||width=3% align="center"|[[Z]]||width=3% align="center"|[[Ž]]||width=3% align="center"|[[Ʒ]]||width=3% align="center"|[[Ǯ]]
 |-
 |bgcolor="#EFEFEF" align="center" colspan="29" | 
 |-
-|align="center"|a||align="center"|b||align="center"|c||align="center"|ç||align="center"|ç̌||align="center"|d||align="center"|e||align="center"|f||align="center"|g||align="center"|ğ||align="center"|h||align="center"|x||align="center"|i||align="center"|j||align="center"|k||align="center"|ǩ||align="center"|q||align="center"|l||align="center"|m||align="center"|n||align="center"|o||align="center"|p||align="center"|p̌||align="center"|r||align="center"|s||align="center"|ş||align="center"|t||align="center"|t̆||align="center"|u||align="center"|v||align="center"|y||align="center"|z||align="center"|ž||align="center"|ʒ||align="center"|y||align="center"|ǯ
+|align="center"|a||align="center"|b||align="center"|c||align="center"|ç||align="center"|ç̌||align="center"|d||align="center"|e||align="center"|f||align="center"|g||align="center"|ğ||align="center"|h||align="center"|x||align="center"|i||align="center"|j||align="center"|k||align="center"|ǩ||align="center"|q||align="center"|l||align="center"|m||align="center"|n||align="center"|o||align="center"|p||align="center"|p̌||align="center"|r||align="center"|s||align="center"|ş||align="center"|t||align="center"|t̆||align="center"|u||align="center"|v||align="center"|y||align="center"|z||align="center"|ž||align="center"|ʒ||align="center"|ǯ
 |}
 </center>
 
