*Empty MediaWiki Message*

--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -55,3 +55,27 @@ Ikilazi kigizwe n’inyuguti 35 : a b c ç ç̌ d e f g ğ h x i j k ǩ q l m n 
 *[http://www.lazuri.com/oxomonduli.html www.lazuri.com] <font color="grey">(mu gituruki)</font>
 
 [[Category:Indimi]]
+
+[[bg:Лазки език]]
+[[br:Lazeg]]
+[[ca:Laz]]
+[[de:Lasische Sprache]]
+[[diq:Lazki]]
+[[en:Laz language]]
+[[es:Idioma laz]]
+[[fr:Laze]]
+[[he:לאזית]]
+[[hu:Láz nyelv]]
+[[it:Lingua laz]]
+[[ja:ラズ語]]
+[[ka:ლაზური ენა]]
+[[ku:Zimanê lazî]]
+[[mk:Ласки јазик]]
+[[ms:Bahasa Laz]]
+[[nl:Lazisch]]
+[[no:Lazisk]]
+[[pl:Język lazyjski]]
+[[pt:Língua laz]]
+[[ru:Лазский язык]]
+[[tr:Lazca]]
+[[uk:Лазська мова]]
