*Empty MediaWiki Message*

--- a/Igifaransa.mw
+++ b/Igifaransa.mw
@@ -1,4 +1,4 @@
-'''Igifaransa''' ni [[ururimi]] ruvugwa mu bihugu by'[[Ubufaransa]], [[Ubusuwisi]] n'[[Ububirigi]].
+'''Igifaransa''' (izina mu gifaransa : ''Français'' ) ni [[ururimi]] ruvugwa mu bihugu by'[[Ubufaransa]], [[Ubusuwisi]] n'[[Ububirigi]].
 
 [[Category:Indimi z’igihinde-buraya]]
 
