*Empty MediaWiki Message*

--- a/Igifaransa.mw
+++ b/Igifaransa.mw
@@ -1,4 +1,6 @@
-'''Igifaransa''' (izina mu gifaransa : ''Français'' ) ni [[ururimi]] ruvugwa mu bihugu by'[[Ubufaransa]], [[Ubusuwisi]] n'[[Ububirigi]].
+[[File:-Map-Francophone World.PNG|thumb|250px|<font color="grey">Ikarita y’Igifaransa</font>]]
+
+'''Igifaransa''' (izina mu gifaransa : ''Français'' ) ni [[ururimi]] ruvugwa mu bihugu by’[[Ubufaransa]], [[Ubusuwisi]] n’[[Ububirigi]].
 
 [[Category:Indimi z’igihinde-buraya]]
 
