--- a/Igifaransa.mw
+++ b/Igifaransa.mw
@@ -1,4 +1,4 @@
-[[File:-Map-Francophone World.PNG|thumb|250px|<font color="grey">Ikarita y’Igifaransa</font>]]
+[[File:New-Map-Francophone World.PNG|thumb|250px|<font color="grey">Ikarita y’Igifaransa</font>]]
 
 '''Igifaransa''' (izina mu gifaransa : ''Français'' ) ni [[ururimi]] ruvugwa mu bihugu by’[[Ubufaransa]], [[Ubusuwisi]] n’[[Ububirigi]].
 
