*Empty MediaWiki Message*

--- a/Umwaka.mw
+++ b/Umwaka.mw
@@ -16,4 +16,4 @@ Ingero:
 
 Umwaka mu Rwanda ugabanyijemo [[Ibihe by ubuhinzi|ibihe]] bine by'ingenzi ari byo [[Urugaryi]], [[Itumba]], [[Icyi]], [[Umuhindo]] bitandukanywa n'imigwire y'[[imvura]]
 
-[[Category:Imyaka]]
+[[Category:Imyaka| ]]
