*Empty MediaWiki Message*

--- a/Umwaka.mw
+++ b/Umwaka.mw
@@ -17,3 +17,133 @@ Ingero:
 Umwaka mu Rwanda ugabanyijemo [[Ibihe by ubuhinzi|ibihe]] bine by'ingenzi ari byo [[Urugaryi]], [[Itumba]], [[Icyi]], [[Umuhindo]] bitandukanywa n'imigwire y'[[imvura]]
 
 [[Category:Imyaka| ]]
+
+[[af:Jaar]]
+[[als:Jahr]]
+[[ang:Gēar]]
+[[ar:سَنَة]]
+[[an:Anyo]]
+[[arc:ܫܢܬܐ (ܙܒܢܐ)]]
+[[ast:Añu]]
+[[ay:Mara]]
+[[az:İl]]
+[[bn:বছর]]
+[[zh-min-nan:Nî]]
+[[ba:Йыл]]
+[[be:Год]]
+[[be-x-old:Год]]
+[[bo:ལོ།]]
+[[bs:Godina]]
+[[br:Bloaz]]
+[[bg:Година]]
+[[ca:Any]]
+[[cv:Çул]]
+[[ceb:Tuig]]
+[[cs:Rok]]
+[[cy:Blwyddyn]]
+[[da:År]]
+[[de:Jahr]]
+[[et:Aasta]]
+[[el:Έτος]]
+[[eml:Ân]]
+[[myv:Ие]]
+[[es:Año]]
+[[eo:Jaro]]
+[[eu:Urte]]
+[[fa:سال]]
+[[hif:Saal]]
+[[fr:Année (calendrier)]]
+[[fy:Jier]]
+[[fur:An]]
+[[ga:Bliain]]
+[[gd:Bliadhna]]
+[[gl:Ano]]
+[[gan:年]]
+[[hak:Ngièn]]
+[[ko:년]]
+[[haw:Makahiki]]
+[[hr:Godina]]
+[[io:Yaro]]
+[[id:Tahun]]
+[[ia:Anno]]
+[[iu:ᐅᑭᐅᖅ/ukuiq]]
+[[os:Аз]]
+[[is:Ár]]
+[[it:Anno]]
+[[he:שנה]]
+[[jv:Taun]]
+[[kn:ವರ್ಷ]]
+[[ka:წელი]]
+[[kw:Bledhen]]
+[[sw:Mwaka]]
+[[ht:Lane]]
+[[ku:Sal]]
+[[lad:Anyo]]
+[[krc:Джыл]]
+[[lo:ປີ]]
+[[la:Annus]]
+[[lv:Gads]]
+[[lb:Joer]]
+[[lt:Metai]]
+[[li:Jaor]]
+[[jbo:nanca]]
+[[hu:Év]]
+[[ml:വർഷം]]
+[[mi:Tau]]
+[[mr:वर्ष]]
+[[arz:سنه]]
+[[ms:Tahun]]
+[[mn:Жил]]
+[[nah:Xihuitl]]
+[[nl:Jaar]]
+[[ne:बर्ष]]
+[[ja:年]]
+[[no:År]]
+[[nn:År]]
+[[nrm:Aun]]
+[[oc:Annada]]
+[[uz:Yil]]
+[[pa:ਸਾਲ]]
+[[pnb:ورہ]]
+[[tpi:Yia]]
+[[nds:Johr]]
+[[pl:Rok]]
+[[pt:Ano]]
+[[ro:An]]
+[[rmy:Bersh]]
+[[qu:Wata]]
+[[ru:Год]]
+[[sah:Сыл]]
+[[se:Jahki]]
+[[sq:Viti]]
+[[scn:Annu]]
+[[simple:Year]]
+[[sk:Rok]]
+[[sl:Leto]]
+[[szl:Rok]]
+[[so:Sanad]]
+[[srn:Yari]]
+[[sr:Година]]
+[[sh:Godina]]
+[[su:Taun]]
+[[fi:Vuosi]]
+[[sv:År]]
+[[tl:Taon]]
+[[ta:ஆண்டு]]
+[[tt:Ел]]
+[[te:సంవత్సరము]]
+[[th:ปี]]
+[[tg:Сол]]
+[[tr:Yıl]]
+[[uk:Рік]]
+[[ur:سال]]
+[[vec:An]]
+[[vi:Năm]]
+[[fiu-vro:Aastak]]
+[[war:Tuig]]
+[[wo:At]]
+[[yi:יאר]]
+[[yo:Ọdún]]
+[[zh-yue:年]]
+[[bat-smg:Metā]]
+[[zh:年]]
