--- a/Umwaka.mw
+++ b/Umwaka.mw
@@ -6,7 +6,7 @@ Umwaka ushobora kugira [[iminsi]] 365 cyangwa 366 bitewe n'uwo ari wo.
 
 Uwo munsi umwe uranga cyangwa ubura uturuka ku kwezi kwa Gashyantare kugira iminsi [[makumyabiri n umunani|makumyabiri n'umunani]] cyangwa [[makumyabiri n icyenda|makumyabiri n'icyenda]] bitewe n'umwaka. 
 
-Buri [[Imyaka|myaka]] ine [[ukwezi kwa kabiri]] guhindura umubare w'iminsi ikaba 29. Ni ukuvuga ko imyaka itatu ikurikiranye igira ukwezi kwa [[Gashyantare]] kw'iminsi 28 maze umwaka ukurikiyeho ugahita uhindura ikaba 29. Imyaka yose [[Kugabanyika|igabanyika]] na kane igira iminsi 366 naho itagabanyika na kane ikagira 365. 
+Buri myaka ine [[ukwezi kwa kabiri]] guhindura umubare w'iminsi ikaba 29. Ni ukuvuga ko imyaka itatu ikurikiranye igira ukwezi kwa [[Gashyantare]] kw'iminsi 28 maze umwaka ukurikiyeho ugahita uhindura ikaba 29. Imyaka yose [[Kugabanyika|igabanyika]] na kane igira iminsi 366 naho itagabanyika na kane ikagira 365. 
 Ingero: 
 * Umwaka wa 1987 wari ufite iminsi 365 (1978 kugabanya 4 ni 496 hagasigara '''3''')
 * Umwaka wa 2000 wari ufite iminsi 366 (2000 kugabanya 4 ni 500 hagasigara '''zeru(0)''')
