/* Amagambo n'interuro mu ikilazi */

--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -32,7 +32,7 @@ Ikilazi kigizwe n’inyuguti 35 : a b c ç ç̌ d e f g ğ h x i j k ǩ q l m n 
 == Amagambo n'interuro mu ikilazi ==
 * '''Xelaǩaoba''' – Muraho
 * '''Ǩai moxtit''' – Murakaza neza 
-* '''Didi Mardi'' – Murakoze
+* '''Didi Mardi''' – Murakoze
 * '''Çkimi coxo...ren''' – Nitwa ...
 * '''Ho''' – Yego
 * '''Va''' – Oya
