--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -23,6 +23,7 @@ Ikilazi kigizwe n’inyuguti 35 : a b c ç ç̌ d e f g ğ h x i j k ǩ q l m n 
 ** '''Laz''' – '''Lazepe''' Umulazi – Abalazi
 ** '''çxomi''' – '''çxomepe''' ifi – amafi
 ** '''bere''' – '''berepe''' umwana – abwana
+** '''xe''' – '''xepe''' ikiganza – ibiganza 
 
 * '''-lepe'''
 ** '''ndğa''' – '''ndğalepe''' umunsi – iminsi
