*Empty MediaWiki Message*

--- a/Umwaka.mw
+++ b/Umwaka.mw
@@ -1,6 +1,6 @@
 '''Umwaka'''
 
-Igice cy'igihe kigizwe n'amezi cumi n'abiri (12) uhereye kuri [[Mutarama]] kugeza mu [[Ukuboza]]. 
+Igice cy'igihe kigizwe n'[[amezi]] cumi n'abiri (12) uhereye kuri [[Mutarama]] kugeza mu [[Ukuboza]]. 
 
 Umwaka ushobora kugira [[iminsi]] 365 cyangwa 366 bitewe n'uwo ari wo. 
 
