--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -569,7 +569,7 @@
 | ZWR || 935 || [[Idolari rya Zimbabwe]] A/09 || 2008-08-01 || 2009-02-02 || ZWL 
 |}
 
-== ==
+== Ibindi ==
 *ALK Ileki Ishaje y’Alubaniya  (Albanian Old Lek)
 *AOK Ikwanza Lishya ry’Angola  (Angolan New Kwanza) 
 *BAD Idenari rya Bosiniya na Herizegovina  (Bosnia and Herzegovina Dinar)
