/* Amagambo n'interuro mu ikinyaturukiya */

--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -37,7 +37,7 @@ Ikinyaturukiya kigizwe n’inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o 
 ** '''erkek''' – '''erkekler''' umugabo – abagabo 
 ** '''ev''' – '''evler''' inzu – amazu
 
-== Amagambo n'interuro mu ikinyaturukiya ==
+== Amagambo n'interuro mu gituruki ==
 
 * '''Merhaba''' – Muraho
 * '''Hoş geldin''' – Murakaza neza 
@@ -72,7 +72,6 @@ Ikinyaturukiya kigizwe n’inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o 
 * '''Yiyoruz''' – Turarya
 * '''Yiyorsunuz''' – Murarya
 * '''Yiyorlar''' – Bararya
-
 
 == Imiyoboro ==
 * [http://tdk.org.tr/TR/Genel/Ana.aspx?F6E10F8892433CFFAAF6AA849816B2EF4376734BED947CDE Türk Dil Kurumu] <font color="grey">(mu kinyaturukiya)</font>
