*Empty MediaWiki Message*

--- a/Umupira_w’amaguru.mw
+++ b/Umupira_w’amaguru.mw
@@ -1,6 +1,6 @@
 [[File:Football iu 1996.jpg|thumb|250px|<font color="grey">Umupira w'Amaguru</font>]]
 
-'''Umupira w’Amaguru''' (izina mu [[Cyongereza]] ''Football'' )
+'''Umupira w’Amaguru''' (izina mu [[cyongereza]] ''Football'' )
 
 Muri iki gihe hari byinshi bivugwa ku buryo amategeko y’umupira w’amaguru asigaye ateye, ibi akenshi bigaragara iyo igitego cyanzwe, nibwo abafana bava ku kibuga bijujuta bikomeye cyane bavuga ko bibwe, maze bakishyiriramo abasifuzi nyamara abasifuzi baba barengana kuko akenshi iyo babonye ibyabereye mu kibuga neza bitabacitse baba bakurikije amategeko ya [[FIFA]] nkuko abivuga.
 
