*Empty MediaWiki Message*

--- a/Ikimokisha.mw
+++ b/Ikimokisha.mw
@@ -1,4 +1,4 @@
-'''Ikimokisha''' (izina mu ikimokisha: ''Мокшень кяль'' cyangwa ''mokshanj kälj'' ) ni [[ururimi]] rw’[[abamokisha]] na rwa [[Morodoviya]]. 
+'''Ikimokisha''' (izina mu kimokisha: ''Мокшень кяль'' cyangwa ''mokshanj kälj'' ) ni [[ururimi]] rw’[[abamokisha]] na rwa [[Morodoviya]]. 
 
 == umugereka – ubuke ==
  
