/* Amagambo n'interuro mu ikimokisha */

--- a/Ikimokisha.mw
+++ b/Ikimokisha.mw
@@ -8,7 +8,7 @@
 *'''пине''' &ndash; '''пинет''' imbwe &ndash; imbwe
 *'''нармонь''' &ndash; '''нармоттне''' inyoni &ndash; inyoni
 
-== Amagambo n'interuro mu ikimokisha ==
+== Amagambo n'interuro mu kimokisha ==
 
 *'''аля''' &ndash; umugabo 
 *'''ава''' &ndash; umugore 
