/* Amagambo n'interuro mu ikilazi */

--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -30,7 +30,7 @@ Ikilazi kigizwe n’inyuguti 35 : a b c ç ç̌ d e f g ğ h x i j k ǩ q l m n 
 ** '''nca''' – '''ncalepe''' igiti – ibiti
 ** '''kva''' – '''kvalepe''' ibuye – amabuye
 
-== Amagambo n'interuro mu ikilazi ==
+== Amagambo n'interuro mu kilazi ==
 * '''Xelaǩaoba''' – Muraho
 * '''Ǩai moxtit''' – Murakaza neza 
 * '''Didi Mardi''' – Murakoze
