--- a/Malidivezi.mw
+++ b/Malidivezi.mw
@@ -1,5 +1,5 @@
 [[File:Flag of Maldives.svg|thumb|250px|<font color="grey">Ibendera rya Malidivezi</font>]]
-[[File:-Maldives (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Malidivezi</font>]]
+[[File:LocationMaldives.png|thumb|250px|<font color="grey">Ikarita ya Malidivezi</font>]]
 
 '''Malidivezi''' (izina mu [[kimaldivezi]] : '''ދިވެހިރާއްޖެ ''' cyangwa '''ދިވެހިރާއްޖޭގެ ޖުމްހޫރިއްޔާ ''') n’[[igihugu]] muri [[Aziya]].
 
