*Empty MediaWiki Message*

--- a/Mutagatifu_Petero_na_Mikeloni.mw
+++ b/Mutagatifu_Petero_na_Mikeloni.mw
@@ -1,8 +1,7 @@
 [[File:Flag of Saint-Pierre and Miquelon.svg|thumb|250px|<font color="grey">Ibendera rya Mutagatifu Petero na Mikeloni</font>]]
 [[File:LocationSaint-PierreAndMiquelon.png|thumb|250px|<font color="grey">Ikarita ya Mutagatifu Petero na Mikeloni</font>]]
 
-'''Mutagatifu Petero na Mikeloni''' (izina mu [[gifaransa]] : ''Collectivité territoriale de
-Saint-Pierre-et-Miquelon'' ) n’[[igihugu]] muri [[Amerika]].
+'''Mutagatifu Petero na Mikeloni''' (izina mu [[gifaransa]] : ''Collectivité territoriale de Saint-Pierre-et-Miquelon'' ) n’[[igihugu]] muri [[Amerika]].
 
 [[Category:Amerika]]
 [[Category:Ibihugu]]
