*Empty MediaWiki Message*

--- a/Ubuholandi.mw
+++ b/Ubuholandi.mw
@@ -1,6 +1,6 @@
 [[File:LocationNetherlands.png|right|450px|Ubuholandi]]
 [[File:Flag of the Netherlands.svg|right|thumb|Ubuholandi]]
-'''Ubuholandi''' n’igihugu muri [[Uburayi]].
+'''Ubuholandi''' cyangwa '''Nederilande''' n’igihugu muri [[Uburayi]].
 
 [[Category:Uburayi]]
 
