*Empty MediaWiki Message*

--- a/Ubuholandi.mw
+++ b/Ubuholandi.mw
@@ -1,8 +1,10 @@
-[[File:LocationNetherlands.png|right|450px|Ubuholandi]]
-[[File:Flag of the Netherlands.svg|right|thumb|Ubuholandi]]
-'''Ubuholandi''' cyangwa '''Nederilande''' n’igihugu muri [[Uburayi]].
+[[File:Flag of the Netherlands.svg|thumb|250px|<font color="grey">Ibendera rya Nederilande</font>]]
+[[File:EU-Netherlands.svg|thumb|250px|<font color="grey">Ikarita ya Nederilande</font>]]
+
+'''Ubuholandi''' cyangwa '''Nederilande''' (izina mu [[kinyaholande]] : ''Nederland'' ) n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
+[[Category:Ibihugu]]
 
 [[ace:Beulanda]]
 [[af:Nederland]]
