*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -485,9 +485,6 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Nawuru]]
 | [[ISO 3166-1 alpha-2#NR|<tt>NR</tt>]] || <tt>NRU</tt> || <tt>520</tt> || [[ISO 3166-2:NR]]
 |-
-| [[Nederilande]]
-| [[ISO 3166-1 alpha-2#NL|<tt>NL</tt>]] || <tt>NLD</tt> || <tt>528</tt> || [[ISO 3166-2:NL]]
-|-
 | [[Nepali]]
 | [[ISO 3166-1 alpha-2#NP|<tt>NP</tt>]] || <tt>NPL</tt> || <tt>524</tt> || [[ISO 3166-2:NP]]
 |-
@@ -700,6 +697,9 @@ Urutonde rw’ibihugu ISO 3166-1
 |-
 | [[Ubuhinde]]
 | [[ISO 3166-1 alpha-2#IN|<tt>IN</tt>]] || <tt>IND</tt> || <tt>356</tt> || [[ISO 3166-2:IN]]
+|-
+| [[Ubuholandi]] (Nederilande)
+| [[ISO 3166-1 alpha-2#NL|<tt>NL</tt>]] || <tt>NLD</tt> || <tt>528</tt> || [[ISO 3166-2:NL]]
 |-
 | [[Uburundi]]
 | [[ISO 3166-1 alpha-2#BI|<tt>BI</tt>]] || <tt>BDI</tt> || <tt>108</tt> || [[ISO 3166-2:BI]]
