Redirected page to [[Nijeriya]]

--- a/Nigeriya.mw
+++ b/Nigeriya.mw
@@ -1,172 +1,1 @@
-[[File:Flag of Nigeria.svg|thumb|250px|<font color="grey">Ibendera rya Nigeriya</font>]]
-[[File:Nigeria (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Nigeriya</font>]]
-
-'''Nigeriya''' (izina mu [[cyongereza]] : ''Federal Republic of Nigeria'' ; izina mu [[kigibo]] : ''Njíkötá Óchíchìiwù Naíjíríà'' ; izina mu [[gifurahe]] : ''Republik Federaal bu Niiseriya'' ; izina mu [[kiyoruba ]] : ''Àpapọ̀ Olómìnira ilẹ̀ Nàìjíríà'' ; izina mu [[gihawusa]] : ''Jamhuriyar Tarayiar Nijeriya '') n’[[igihugu]] muri [[Afurika]].
-
-[[Category:Afurika]]
-[[Category:Ibihugu]]
-
-[[ace:Nigeria]]
-[[af:Nigerië]]
-[[ak:Nigeria]]
-[[als:Nigeria]]
-[[am:ናይጄሪያ]]
-[[ang:Nigeria]]
-[[ar:نيجيريا]]
-[[an:Nicheria]]
-[[frp:Nig·èria]]
-[[ast:Nixeria]]
-[[az:Nigeriya]]
-[[bm:Nijeria]]
-[[bjn:Nigeria]]
-[[bn:নাইজেরিয়া]]
-[[zh-min-nan:Nigeria]]
-[[be:Нігерыя]]
-[[be-x-old:Нігерыя]]
-[[bcl:Nigerya]]
-[[bo:ནི་ཇི་རི་ཡ།]]
-[[bs:Nigerija]]
-[[br:Nigeria]]
-[[bg:Нигерия]]
-[[ca:Nigèria]]
-[[cv:Нигери]]
-[[ceb:Nigeria]]
-[[cs:Nigérie]]
-[[cy:Nigeria]]
-[[da:Nigeria]]
-[[de:Nigeria]]
-[[dv:ނައިޖީރިއާ]]
-[[et:Nigeeria]]
-[[el:Νιγηρία]]
-[[es:Nigeria]]
-[[eo:Niĝerio]]
-[[ext:Nigéria]]
-[[eu:Nigeria]]
-[[ee:Nigeria]]
-[[fa:نیجریه]]
-[[hif:Nigeria]]
-[[fo:Nigeria]]
-[[fr:Nigeria]]
-[[fy:Nigearia]]
-[[ff:Niiseriya]]
-[[ga:An Nigéir]]
-[[gv:Yn Naigeer]]
-[[gd:Nìgeiria]]
-[[gl:Nixeria - Nigeria]]
-[[gan:尼日利亞]]
-[[gu:નાઈજેરિયા]]
-[[hak:Nai-khi̍p-li-â]]
-[[xal:Нигермудин Ниицәтә Орн]]
-[[ko:나이지리아]]
-[[ha:Nijeriya]]
-[[hy:Նիգերիա]]
-[[hi:नाईजीरिया]]
-[[hr:Nigerija]]
-[[io:Nigeria]]
-[[ig:Naigeria]]
-[[ilo:Nigeria]]
-[[bpy:নাইজেরিয়া]]
-[[id:Nigeria]]
-[[ia:Nigeria]]
-[[ie:Nigeria]]
-[[os:Нигери]]
-[[xh:INigeria]]
-[[is:Nígería]]
-[[it:Nigeria]]
-[[he:ניגריה]]
-[[jv:Nigeria]]
-[[kn:ನೈಜೀರಿಯ]]
-[[pam:Nigeria]]
-[[ka:ნიგერია]]
-[[ks:नैजीरिया]]
-[[kk:Нигерия]]
-[[kw:Nijeri]]
-[[rw:Nijeriya]]
-[[sw:Nigeria]]
-[[kg:Nizeria]]
-[[ht:Nijerya]]
-[[ku:Nîjerya]]
-[[la:Nigeria]]
-[[lv:Nigērija]]
-[[lb:Nigeria]]
-[[lt:Nigerija]]
-[[lij:Nigeria]]
-[[li:Nigeria]]
-[[ln:Nizeria]]
-[[jbo:nixerias]]
-[[lmo:Nigeria]]
-[[hu:Nigéria]]
-[[mk:Нигерија]]
-[[ml:നൈജീരിയ]]
-[[mt:Niġerja]]
-[[mr:नायजेरिया]]
-[[arz:نايجيريا]]
-[[ms:Nigeria]]
-[[mn:Нигери]]
-[[nah:Nigeria]]
-[[nl:Nigeria]]
-[[ne:नाइजेरिया]]
-[[ja:ナイジェリア]]
-[[pih:Niijiirya]]
-[[no:Nigeria]]
-[[nn:Nigeria]]
-[[nov:Nigeria]]
-[[oc:Nigèria]]
-[[uz:Nigeriya]]
-[[pnb:نائیجیریا]]
-[[pap:Nigeria]]
-[[ps:نايجېريا]]
-[[pms:Nigeria]]
-[[tpi:Naijiria]]
-[[nds:Nigeria]]
-[[pl:Nigeria]]
-[[pt:Nigéria]]
-[[crh:Nigeriya]]
-[[ro:Nigeria]]
-[[qu:Niqirya]]
-[[ru:Нигерия]]
-[[sah:Нигерия]]
-[[se:Nigeria]]
-[[sa:नैजीरिया]]
-[[sc:Nigéria]]
-[[stq:Nigeria]]
-[[sq:Nigeria]]
-[[scn:Nigeria]]
-[[simple:Nigeria]]
-[[ss:INayijeriya]]
-[[sk:Nigéria]]
-[[sl:Nigerija]]
-[[szl:Ńigeryjo]]
-[[so:Nayjeeriya]]
-[[sr:Нигерија]]
-[[sh:Nigerija]]
-[[fi:Nigeria]]
-[[sv:Nigeria]]
-[[tl:Niherya]]
-[[ta:நைஜீரியா]]
-[[te:నైజీరియా]]
-[[th:ประเทศไนจีเรีย]]
-[[ti:ናይጂሪያ]]
-[[tg:Ниҷерия]]
-[[tr:Nijerya]]
-[[tk:Nigeriýa]]
-[[uk:Нігерія]]
-[[ur:نائجیریا]]
-[[ug:نىگېرىيە]]
-[[za:Nizywlihya]]
-[[vec:Nigeria]]
-[[vi:Nigeria]]
-[[vo:Nigeriyän]]
-[[fiu-vro:Nigeeriä]]
-[[wa:Nidjeria]]
-[[zh-classical:尼日利亞]]
-[[war:Nigerya]]
-[[wo:Niseeria]]
-[[wuu:尼日利亚]]
-[[ts:Nigeria]]
-[[yi:ניזשעריע]]
-[[yo:Nàìjíríà]]
-[[zh-yue:尼日利亞]]
-[[diq:Nicerya]]
-[[bat-smg:Nigerėjė]]
-[[zh:奈及利亞]]
+#REDIRECT  [[Nijeriya]]
