*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -491,7 +491,7 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Nigeri]]
 | [[ISO 3166-1 alpha-2#NE|<tt>NE</tt>]] || <tt>NER</tt> || <tt>562</tt> || [[ISO 3166-2:NE]]
 |-
-| [[Nigeriya]]
+| [[Nijeriya]]
 | [[ISO 3166-1 alpha-2#NG|<tt>NG</tt>]] || <tt>NGA</tt> || <tt>566</tt> || [[ISO 3166-2:NG]]
 |-
 | [[Nikaragwa]]
