*Empty MediaWiki Message*

--- a/Nijeriya.mw
+++ b/Nijeriya.mw
@@ -1,6 +1,9 @@
-[[File:LocationNigeria.png|right|450px|]]
-[[File:Flag of Nigeria.svg|right|thumb|]]
-Repubulika ya '''Nijeriya''' ni igihugu muri [[Afurika]]. Indimi nkuru za Nijeriya ni [[icyigbo]], [[ikiyoruba]], [[igihawusa]], n'[[icyongereza]].
+[[File:Flag of Nigeria.svg|thumb|250px|<font color="grey">Ibendera rya Nigeriya</font>]]
+[[File:Nigeria (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Nigeriya</font>]]
+
+'''Nijeriya''' cyangwa '''Nigeriya''' , '''Repubulika ya Nijeriya''' (izina mu [[cyongereza]] : ''Federal Republic of Nigeria'' ; izina mu [[kigibo]] : ''Njíkötá Óchíchìiwù Naíjíríà'' ; izina mu [[gifurahe]] : ''Republik Federaal bu Niiseriya'' ; izina mu [[kiyoruba ]] : ''Àpapọ̀ Olómìnira ilẹ̀ Nàìjíríà'' ; izina mu [[gihawusa]] : ''Jamhuriyar Tarayiar Nijeriya '') n’[[igihugu]] muri [[Afurika]].
+
+Indimi nkuru za Nijeriya ni [[icyigbo]], [[ikiyoruba]], [[igihawusa]], n’[[icyongereza]].
 
 [[Category:Afurika]]
 [[Category:Ibihugu]] 
