*Empty MediaWiki Message*

--- a/Noruveje.mw
+++ b/Noruveje.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Norway.svg|thumb|250px|<font color="grey">Ibendera rya Noruveje</font>]]
 [[File:Europe-Norway.svg|thumb|250px|<font color="grey">Ikarita ya Noruveje</font>]]
 
-'''Noruveje''' cyangwa '''Norvege''' n’[[igihugu]] muri [[Uburayi]].
+'''Noruveje''' cyangwa '''Norvege''' (izina mu [[kinyanoruveji]] bokmål : ''Norge'' ; izina mu [[kinyanoruveji]] nayinorusiki : ''Noreg'') n’[[igihugu]] mu [[Burayi]].
 
 Muri Noruveje, hari imyaka cumi y’indero y’intango umwana wese ategerezwa kwiga; bisigura yuko abavyeyi bategerezwa kurungika abana babo mu mashure bakanakora kuburyo imyimenyerezo bahawe bayikora. Ishure ritoya n’ishure rikuru ritangura vyigwa kuri gusa, kandi ubutegetsi bw’agace ubamwo buriha ibitabo vy’amashure y’abana. 
 
