*Empty MediaWiki Message*

--- a/Palawu.mw
+++ b/Palawu.mw
@@ -1,5 +1,5 @@
 [[File:Flag of Palau.svg|thumb|250px|<font color="grey">Ibendera rya Palawu</font>]]
-[[File:Palau.png|thumb|250px|<font color="grey">Ikarita ya Palawu</font>]]
+[[File:LocationPalau.png|thumb|250px|<font color="grey">Ikarita ya Palawu</font>]]
 
 '''Palawu''' (izina mu [[gipalawani]] : ''Beluu er a Belau'' ; izina mu [[cyongereza]] : ''Republic of Palau'' ) n’[[igihugu]] muri [[Oseyaniya]].
 
