*Empty MediaWiki Message*

--- a/Piticayirine.mw
+++ b/Piticayirine.mw
@@ -1,4 +1,4 @@
-[[File:Flag of the Pitcairn Islands|thumb|250px|<font color="grey">Ibendera rya Piticayirine</font>]]
+[[File:Flag of the Pitcairn Islands.svg|thumb|250px|<font color="grey">Ibendera rya Piticayirine</font>]]
 [[File:LocationPitcairnIslands.jpg|thumb|250px|<font color="grey">Ikarita ya Piticayirine</font>]]
 
 '''Piticayirine''' (izina mu [[cyongereza]] : ''Pitcairn Islands'' cyangwa ''Pitcairn, Henderson, Ducie and Oeno Islands'' ; izina mu "Pitkern" : ''Pitkern Ailen'' ) n’[[igihugu]] muri [[Oseyaniya]].
