*Empty MediaWiki Message*

--- a/Porutigali.mw
+++ b/Porutigali.mw
@@ -1,5 +1,5 @@
 [[File:Flag of Portugal.svg|thumb|250px|<font color="grey">Ibendera rya Porutigali</font>]]
-[[File:EU-Poland.svg|thumb|250px|<font color="grey">Ikarita ya Porutigali</font>]]
+[[File:EU-Portugal with islands circled.svg|thumb|250px|<font color="grey">Ikarita ya Porutigali</font>]]
 
 '''Porutigali''' (izina mu [[giporutigali]] : ''República Portuguesa'' ; izina mu [[kimeduri]] : ''República Pertuesa'') n’[[igihugu]] muri [[Aziya]].
 
