*Empty MediaWiki Message*

--- a/Romaniya.mw
+++ b/Romaniya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Romania.svg|thumb|250px|<font color="grey">Ibendera rya Romaniya</font>]]
 [[File:Romania (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Romaniya</font>]]
 
-'''Romaniya''' (izina mu [[kinyarumaniya]] : ''Türkmenistan'' ) n’[[igihugu]] mu [[Burayi]].
+'''Romaniya''' (izina mu [[kinyarumaniya]] : ''România'' ) n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
