*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -713,7 +713,7 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Ubusuwisi]]
 | [[ISO 3166-1 alpha-2#CH|<tt>CH</tt>]] || <tt>CHE</tt> || <tt>756</tt> || [[ISO 3166-2:CH]]
 |-
-| [[Ubutariyani]]
+| [[Ubutaliyani]]
 | [[ISO 3166-1 alpha-2#IT|<tt>IT</tt>]] || <tt>ITA</tt> || <tt>380</tt> || [[ISO 3166-2:IT]]
 |-
 | [[Ubuyapani]]
