*Empty MediaWiki Message*

--- a/Shipure.mw
+++ b/Shipure.mw
@@ -3,7 +3,7 @@
 
 '''Shipure''' (izina mu [[kigereki]] : ''Κυπριακή Δημοκρατία'' ; izina mu [[gituruki]] : ''Kıbrıs Cumhuriyeti'' ) n’[[igihugu]] muri [[Aziya]].
 
-[[Category:Afurika]]
+[[Category:Aziya]]
 [[Category:Ibihugu]]
 
 [[ace:Siprus]]
