*Empty MediaWiki Message*

--- a/Shipure.mw
+++ b/Shipure.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Cyprus.svg|thumb|250px|<font color="grey">Ibendera rya Shipure</font>]]
 [[File:EU-Cyprus.svg|thumb|250px|<font color="grey">Ikarita ya Shipure</font>]]
 
-'''Shipure''' (izina mu [[kigereki]] : ''Κυπριακή Δημοκρατία'' ; izina mu [[gituruki]] : ''Kıbrıs Cumhuriyeti'' ) n’[[igihugu]] muri [[Aziya]].
+'''Shipure''' cyangwa '''Shipure y’Amajyepfo''' (izina mu [[kigereki]] : ''Κυπριακή Δημοκρατία'' ; izina mu [[gituruki]] : ''Kıbrıs Cumhuriyeti'' ) n’[[igihugu]] muri [[Aziya]].
 
 [[Category:Aziya]]
 [[Category:Ibihugu]]
