*Empty MediaWiki Message*

--- a/Shipure.mw
+++ b/Shipure.mw
@@ -3,6 +3,8 @@
 
 '''Shipure''' cyangwa '''Shipure y’Amajyepfo''' (izina mu [[kigereki]] : ''Κυπριακή Δημοκρατία'' ; izina mu [[gituruki]] : ''Kıbrıs Cumhuriyeti'' ) n’[[igihugu]] muri [[Aziya]].
 
+*[[Shipure y’Amajyaruguru]]
+
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
