--- a/Shipure_y’Amajyaruguru.mw
+++ b/Shipure_y’Amajyaruguru.mw
@@ -1,5 +1,5 @@
 [[File:Flag of the Turkish Republic of Northern Cyprus.svg|thumb|250px|<font color="grey">Ibendera rya Shipure y’Amajyaruguru</font>]]
-[[File:NCyprus location.svg|thumb|250px|<font color="grey">Ikarita ya Shipure y’Amajyaruguru</font>]]
+[[File:TRNC location.svg|thumb|250px|<font color="grey">Ikarita ya Shipure y’Amajyaruguru</font>]]
 
 '''Shipure y’Amajyaruguru''' (izina mu [[gituruki]] : ''Kuzey Kıbrıs'' cyangwa ''Kuzey Kıbrıs Türk Cumhuriyeti'' ) n’[[igihugu]] muri [[Aziya]].
 
