*Empty MediaWiki Message*

--- a/Silovakiya.mw
+++ b/Silovakiya.mw
@@ -1,7 +1,7 @@
-[[File:EU-Slovakia.svg|thumb|Silovakiya]]
-[[File:Flag of Slovakia.svg|right|thumb|150px|Silovakiya]]
+[[File:Flag of Slovakia.svg|thumb|250px|<font color="grey">Ibendera rya Silovakiya</font>]]
+[[File:EU-Slovakia.svg|thumb|250px|<font color="grey">Ikarita ya Silovakiya</font>]]
 
-'''Silovakiya''' n’igihugu muri [[Uburayi]].
+'''Silovakiya''' (izina mu [[gisilovake]] : ''Slovensko'' cyangwa ''Slovenská republika'' ) n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
