*Empty MediaWiki Message*

--- a/Siloveniya.mw
+++ b/Siloveniya.mw
@@ -1,13 +1,7 @@
-[[File:EU-Slovenia.svg|thumb|Siloveniya]]
-[[File:Flag of Slovenia.svg|right|thumb|150px|Siloveniya]]
+[[File:Flag of Slovenia.svg|thumb|250px|<font color="grey">Ibendera rya Siloveniya</font>]]
+[[File:EU-Slovenia.svg|thumb|250px|<font color="grey">Ikarita ya Siloveniya</font>]]
 
-'''Siloveniya''' n’igihugu muri [[Uburayi]].
-
- 
-== Links ==
- 
-* [http://www.slovenia.si/ Slovenia.si]. Your gateway to information on Slovenia.
-* [http://www.vlada.si/en/ Government of the Republic of Slovenia]
+'''Siloveniya''' (izina mu [[kinyasiloveniya]] : ''Slovenija'' cyangwa ''Republika Slovenija'' ) n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
